<resources>
    <string name="app_name">Calculator</string>
    <string name="mc">MC</string>
    <string name="ac">AC</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="m">M+</string>
    <string name="_m">M-</string>
    <string name="_00">*</string>
    <string name="_11">=</string>
    <string name="_22">+/-</string>
    <string name="_33">+</string>
    <string name="del">Del</string>
    <string name="_44">,</string>
    <string name="mr">MR</string>
    <string name="_55">%</string>
    <string name="_66">-</string>
    <string name="_77">/</string>
    <string name="zero"> </string>
    <string name="x">√x</string>
    <string name="x_2">x^2</string>
    <string name="pi">Pi</string>
    <string name="_1_x">1/x</string>
    <string name="textview">TextView</string>
</resources>
